Bug 466230 - The eyedropper in the colorpicker widget does not work when compositor is disabled
Summary: The eyedropper in the colorpicker widget does not work when compositor is dis...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Color Picker (other bugs)
Version First Reported In: 5.27.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-02-22 05:24 UTC by grayich
Modified: 2023-05-13 02:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments
video showing the problem (848.54 KB, video/mp4)
2023-02-22 05:24 UTC, grayich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description grayich 2023-02-22 05:24:51 UTC
Created attachment 156586 [details]
video showing the problem

The eyedropper in the colorpicker widget does not work

all other widget functions work, only the eyedropper does not work

video attached..
Comment 1 Nate Graham 2023-02-22 17:46:56 UTC
Works for me on Wayland. Are you using Wayland or X11?

Can you run `journalctl --follow --user --unit=plasma-plasmashell.service` in a terminal window to see logs for plasmashell, and then click on the dropper button again? Let me know if anything is printed to the terminal window when you click it.
Comment 2 grayich 2023-02-23 03:29:47 UTC
Found the reason why it didn't work. The eefects were completely turned off . It works with the effects enabled.
imho - it's not obvious, it wasn't written anywhere in the supplement that effects are needed

thanks
Comment 3 Nate Graham 2023-02-23 03:42:15 UTC
Thanks. Which effect were turned off?
Comment 4 grayich 2023-02-23 04:06:51 UTC
systemsettings > Display and Monitor > Compositor > [off] Enable on startup
Comment 5 Fushan Wen 2023-02-23 04:07:56 UTC
Should probably disable the picker button when compositing is disabled and show some text in the tooltip.
Comment 6 Nate Graham 2023-02-24 14:35:44 UTC
Good idea!
Comment 7 Bug Janitor Service 2023-04-29 03:52:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/373
Comment 8 Bug Janitor Service 2023-05-02 04:24:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/374
Comment 9 Fushan Wen 2023-05-07 00:57:04 UTC
Git commit 852c0663803a64aa7fb93ca296260c58e8b2d6ac by Fushan Wen.
Committed on 07/05/2023 at 00:56.
Pushed by fusionfuture into branch 'Plasma/5.27'.

applets/colorpicker: disable pick button when compositing is disabled
FIXED-IN: 5.27.5

M  +1    -0    applets/colorpicker/package/contents/ui/CompactRepresentation.qml
M  +6    -0    applets/colorpicker/package/contents/ui/main.qml

https://invent.kde.org/plasma/kdeplasma-addons/commit/852c0663803a64aa7fb93ca296260c58e8b2d6ac
Comment 10 Fushan Wen 2023-05-13 02:58:09 UTC
Git commit 3aaf396aa791b6902f4517033838381a1c6d4d3e by Fushan Wen.
Committed on 13/05/2023 at 02:58.
Pushed by fusionfuture into branch 'master'.

applets/colorpicker: disable pick button when compositing is disabled
FIXED-IN: 5.27.5

(cherry picked from commit 852c0663803a64aa7fb93ca296260c58e8b2d6ac)

M  +2    -0    applets/colorpicker/package/contents/ui/CompactRepresentation.qml
M  +16   -2    applets/colorpicker/package/contents/ui/main.qml

https://invent.kde.org/plasma/kdeplasma-addons/commit/3aaf396aa791b6902f4517033838381a1c6d4d3e