applets/colorpicker: disable pick button when compositing is disabled

BUG: 466230
FIXED-IN: 5.27.5