applets/colorpicker/plugin/grabwidget.cpp
@@ -14,6 +14,7 @@
 #include <QDBusPendingCall>
 #include <QDBusPendingCallWatcher>
 #include <QDBusPendingReply>
+#include <QDBusServiceWatcher>
 
 Q_DECLARE_METATYPE(QColor)
 
@@ -37,8 +38,14 @@ const QDBusArgument &operator>>(const QDBusArgument &argument, QColor &color)
 
 GrabWidget::GrabWidget(QObject *parent)
     : QObject(parent)
+    , m_serviceWatcher(new QDBusServiceWatcher(QStringLiteral("org.kde.KWin"),
+                                               QDBusConnection::sessionBus(),
+                                               QDBusServiceWatcher::WatchForRegistration | QDBusServiceWatcher::WatchForUnregistration,
+                                               this))
 {
     qDBusRegisterMetaType<QColor>();
+
+    initCompositorWatcher();
 }
 
 QColor GrabWidget::currentColor() const
@@ -54,6 +61,11 @@ void GrabWidget::setCurrentColor(const QColor &color)
     m_currentColor = color;
 
     Q_EMIT currentColorChanged();
+}
+
+bool GrabWidget::isCompositingActive() const
+{
+    return m_isCompositingActive;
 }
 
 void GrabWidget::pick()
@@ -76,4 +88,59 @@ void GrabWidget::pick()
 void GrabWidget::copyToClipboard(const QString &text)
 {
     QApplication::clipboard()->setText(text);
+}
+
+void GrabWidget::slotPropertiesChanged(const QString &interfaceName, const QVariantMap &changedProperties, const QStringList &)
+{
+    if (interfaceName != QLatin1String("org.kde.kwin.Compositing")) {
+        return;
+    }
+
+    const auto it = changedProperties.constFind(QStringLiteral("active"));
+    if (it == changedProperties.cend()) {
+        return;
+    }
+
+    m_isCompositingActive = it.value().toBool();
+    Q_EMIT isCompositingActiveChanged();
+}
+
+void GrabWidget::initCompositorWatcher()
+{
+    connect(m_serviceWatcher, &QDBusServiceWatcher::serviceRegistered, this, &GrabWidget::queryCompositingActive);
+    connect(m_serviceWatcher, &QDBusServiceWatcher::serviceUnregistered, this, [this] {
+        m_isCompositingActive = false;
+        Q_EMIT isCompositingActiveChanged();
+    });
+
+    const bool connected = QDBusConnection::sessionBus().connect(QStringLiteral("org.kde.KWin"),
+                                                                 QStringLiteral("/Compositor"),
+                                                                 QStringLiteral("org.freedesktop.DBus.Properties"),
+                                                                 QStringLiteral("PropertiesChanged"),
+                                                                 this,
+                                                                 SLOT(slotPropertiesChanged(QString, QVariantMap, QStringList)));
+    if (!connected) {
+        return;
+    }
+
+    queryCompositingActive();
+}
+
+void GrabWidget::queryCompositingActive()
+{
+    QDBusMessage msg = QDBusMessage::createMethodCall(QStringLiteral("org.kde.KWin"),
+                                                      QStringLiteral("/Compositor"),
+                                                      QStringLiteral("org.freedesktop.DBus.Properties"),
+                                                      QStringLiteral("Get"));
+    msg << QStringLiteral("org.kde.kwin.Compositing") << QStringLiteral("active");
+    auto call = QDBusConnection::sessionBus().asyncCall(msg);
+    QDBusPendingCallWatcher *watcher = new QDBusPendingCallWatcher(call, this);
+    connect(watcher, &QDBusPendingCallWatcher::finished, this, [this](QDBusPendingCallWatcher *watcher) {
+        watcher->deleteLater();
+        QDBusPendingReply<QVariant> reply = *watcher;
+        if (!reply.isError()) {
+            m_isCompositingActive = reply.value().toBool();
+            Q_EMIT isCompositingActiveChanged();
+        }
+    });
 }
